--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /PatientManagementProject/nbproject/private/
 /PatientManagementProject/build/
 /PatientManagementProject/dist/
+/PatientManagementModel/nbproject/private/
+/PatientManagementModel/build/
