--- a/PatientManagementModel/nbproject/project.properties
+++ b/PatientManagementModel/nbproject/project.properties
@@ -24,13 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PatientManagementProject.jar
+dist.jar=${dist.dir}/PatientManagementModel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.PatientManagementModel.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -41,7 +40,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -55,13 +56,9 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=patientmanagementproject.PatientManagementProject
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.PatientManagementModel=../PatientManagementModel
-reference.PatientManagementModel.jar=${project.PatientManagementModel}/dist/PatientManagementModel.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
